Refactor native-image.properties into features
Explictly enable reflection for AAS model classes